# treetop-cli

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  ProjectRequirements.md  README.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml  security.yml
benches/: treemap_bench.rs
docs/: CHANGELOG.md  PERF_BASELINE.md  perf_baseline.json
src/: action.rs  app.rs  config.rs  event.rs  format.rs  lib.rs  main.rs  perf.rs
src/system/: collector.rs  history.rs  kill.rs  mod.rs  process.rs  snapshot.rs
src/system/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/treemap/: algorithm.rs  color.rs  mod.rs  node.rs
src/ui/: detail_panel.rs  header.rs  help.rs  mod.rs  selection_bar.rs  statusbar.rs  tests.rs  theme.rs  treemap_widget.rs
src/ui/snapshots/: treetop__ui__tests__ui_detail_panel.snap  treetop__ui__tests__ui_header.snap  treetop__ui__tests__ui_selection_bar_empty.snap  treetop__ui__tests__ui_selection_bar_truncation.snap  treetop__ui__tests__ui_selection_bar_with_selection.snap  treetop__ui__tests__ui_statusbar.snap  treetop__ui__tests__ui_treemap_flush_tiles.snap  treetop__ui__tests__ui_treemap_mixed_palette.snap  treetop__ui__tests__ui_treemap_other_group.snap  treetop__ui__tests__ui_treemap_selected_warm.snap  treetop__ui__tests__ui_treemap_widget.snap
tests/: architecture_boundaries.rs  platform_kill_smoke.rs  snapshot_tests.rs  treemap_layout_tests.rs
tests/snapshots/: snapshot_tests__process_tree_normalized.snap
