[package]
name = "treetop"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.38.0"
tokio = { version = "1.49.0", features = ["rt", "macros", "time"] }
toml = "0.9.11"
unicode-width = "0.2.2"

[dev-dependencies]
criterion = "0.8.2"
insta = "1.46.3"
proptest = "1.10.0"
